# sophieparshina-labs-master-381706-2

./: .travis.yml  CMakeLists.txt  README.md
ExceptionLib/: CMakeLists.txt  Exception.h
List/: CMakeLists.txt  main_List.cpp
ListLib/: CMakeLists.txt  Elem.h  List.h  ListLib.cpp
ListTest/: CMakeLists.txt  ListTest.cpp  test_main.cpp
Reports/: List.docx
Stack/: CMakeLists.txt  main_Stack.cpp
StackLib/: CMakeLists.txt  Stack.h
StackTest/: CMakeLists.txt  StackTest.cpp
gtest/: CMakeLists.txt  gtest-all.cc  gtest.h
